fix some style on phone

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div id="bieres" class="page">
       <div class="biere-presentation">
-        <img src="BouteilleBlonde.png" height="400px" />
+        <img src="BouteilleBlonde.png" />
         <div>
           <h2>La Blonde</h2>
           <div class="biere-description">
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="biere-presentation">
-        <img src="BouteilleIPA.png" height="400px" />
+        <img src="BouteilleIPA.png" />
         <div>
           <h2>L'IPA</h2>
           <div class="biere-description">
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="biere-presentation">
-        <img src="BouteilleAmbree.png" height="400px" />
+        <img src="BouteilleAmbree.png" />
         <div>
           <h2>L'Ambrée</h2>
           <div class="biere-description">
